--- a/QuarantineHub/appsettings.json
+++ b/QuarantineHub/appsettings.json
@@ -1,7 +1,13 @@
 {
+  "MongoConfiguration": {
+    "connectionString": "mongodb://localhost:27017",
+    "databaseName": "sn2"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
